--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <script src="../app.js"></script>
+    <!--     <script src="../app.js"></script> -->
     <script src="../app2.js"></script>
+    <script src="../app3.js"></script>
   </body>
 </html>
